objects/CM_Report_Center_Links__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Report_Description__c</fullName>
        <description>Text that will display on mouse over to describe the report</description>
        <label>Report Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Label__c</fullName>
        <description>Text to be displayed in Report as Report Name</description>
        <label>Report Label</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Link__c</fullName>
        <description>Link of Report</description>
        <label>Report Link</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Integer value, Sort order 1 - 999</description>
        <label>Sort Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CM_Report_Center_Links</label>
</CustomObject>